--- a/client/common/orgtask-todo-item/orgtask-todo-item.html
+++ b/client/common/orgtask-todo-item/orgtask-todo-item.html
@@ -45,6 +45,8 @@
 {{> aorprocessor}}
 {{/if}}
 
+      <div class="btn btn-primary somedaymaybe">Someday/Maybe</div>
+
     {{#if process}}
       <button type="button" style="float:right;" class="processing-button">process</button>
     {{/if}}
