--- a/client/common/aortimeviewtaskinbox_item/aortimeviewtaskinbox_item.html
+++ b/client/common/aortimeviewtaskinbox_item/aortimeviewtaskinbox_item.html
@@ -40,7 +40,7 @@
 {{/if}}
 
 {{> projectprocessor}}
-      <div class="btn btn-primary somedaymaybe">Someday/Maybe</div>
+{{> somedaymaybebutton}}
 {{> aorunprocessor}}
 
     {{#if process}}
