archive and trash

--- a/client/common/aortimeviewtaskinbox_item/aortimeviewtaskinbox_item.html
+++ b/client/common/aortimeviewtaskinbox_item/aortimeviewtaskinbox_item.html
@@ -39,6 +39,8 @@
 <div class="todo-item">       <p>{{description}}</p> </div>
 {{/if}}
 
+{{> nonactionable}}
+
 {{> projectprocessor}}
 {{> somedaymaybebutton}}
 {{> aorunprocessor}}
